it works! kinda